logs/games.log
2015-10-04T15:37:58.676Z - error: Not Found
2015-10-04T15:41:44.078Z - error: Not Found
2015-10-04T15:42:06.436Z - error: Not Found
2015-10-04T15:48:24.523Z - info: Number of currently running games #=2
2015-10-04T17:55:07.155Z - info: Number of currently running games #=1
2015-10-04T18:19:40.139Z - error: uncaughtException: /Users/Jay/Fullstack/Fullstack-review/shogun-v2/src/js/components/GameInterface.js: Unexpected token (156:8)
  154 |         [90m//   gameOver={gameOver} />[39m
  155 | 
> 156 |         [37m[1m<[22m[39m[37mBoard[39m [37m[1m/[22m[39m[37m[1m>[22m[39m
      |         ^
  157 | 
  158 |         [37m[1m<[22m[39m[37mModal[39m [37mdata[39m[37m[1m=[22m[39m[32m{[39m[36mthis[39m[37m[1m.[22m[39m[37mstate[39m[37m[1m.[22m[39m[37mmodal[39m[32m}[39m [37m[1m/[22m[39m[37m[1m>[22m[39m
  159 |       [37m[1m<[22m[39m[37m[1m/[22m[39m[37mdiv[39m[37m[1m>[22m[39m date=Sun Oct 04 2015 14:19:40 GMT-0400 (EDT), pid=617, uid=501, gid=20, cwd=/Users/Jay/Fullstack/Fullstack-review/shogun-v2, execPath=/usr/local/bin/node, version=v0.12.7, argv=[node, /Users/Jay/Fullstack/Fullstack-review/shogun-v2/bin/www], rss=76705792, heapTotal=62798336, heapUsed=32532936, loadavg=[0.92431640625, 1.36865234375, 1.37841796875], uptime=2054, trace=[column=15, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=raise, line=343, method=null, native=false, column=5, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=unexpected, line=2278, method=null, native=false, column=7, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXIdentifier, line=4004, method=null, native=false, column=16, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXNamespacedName, line=4014, method=null, native=false, column=17, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXAttribute, line=4106, method=null, native=false, column=28, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXOpeningElementAt, line=4118, method=null, native=false, column=26, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXElementAt, line=4140, method=null, native=false, column=27, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXElementAt, line=4153, method=null, native=false, column=12, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseJSXElement, line=4199, method=null, native=false, column=14, file=/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js, function=parseExprAtom, line=3278, method=null, native=false], stack=[SyntaxError: /Users/Jay/Fullstack/Fullstack-review/shogun-v2/src/js/components/GameInterface.js: Unexpected token (156:8),   154 |         [90m//   gameOver={gameOver} />[39m,   155 | , > 156 |         [37m[1m<[22m[39m[37mBoard[39m [37m[1m/[22m[39m[37m[1m>[22m[39m,       |         ^,   157 | ,   158 |         [37m[1m<[22m[39m[37mModal[39m [37mdata[39m[37m[1m=[22m[39m[32m{[39m[36mthis[39m[37m[1m.[22m[39m[37mstate[39m[37m[1m.[22m[39m[37mmodal[39m[32m}[39m [37m[1m/[22m[39m[37m[1m>[22m[39m,   159 |       [37m[1m<[22m[39m[37m[1m/[22m[39m[37mdiv[39m[37m[1m>[22m[39m,     at raise (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:343:15),     at unexpected (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:2278:5),     at parseJSXIdentifier (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4004:7),     at parseJSXNamespacedName (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4014:16),     at parseJSXAttribute (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4106:17),     at parseJSXOpeningElementAt (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4118:28),     at parseJSXElementAt (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4140:26),     at parseJSXElementAt (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4153:27),     at parseJSXElement (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:4199:12),     at parseExprAtom (/Users/Jay/Fullstack/Fullstack-review/shogun-v2/node_modules/babel/node_modules/acorn-babel/acorn_csp.js:3278:14)]
2015-10-04T18:30:57.448Z - info: Number of currently running games #=1
